@@ -3,6 +3,7 @@ module Capistrano
 
   class CaptureError < Error; end
   class NoSuchTaskError < Error; end
+  class NoMatchingServersError < Error; end
   
   class RemoteError < Error
     attr_accessor :hosts
